--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -193,6 +193,11 @@ nav:
     - "Overview": new_born/index.md
     - "New Born Feeding": new_born/new_born_feeding.md
     - "Mother's Milk": new_born/mothers_milk.md
+  - "Product Catalog":
+    - "Overview": products/index.md
+    - "HPA Lanolin": products/hpa_lanolin_lansinoh.md
   - "About":
     - "Roadmap": meta/roadmap.md
     - "Changelog": meta/changelog.md
+    - "Tags": meta/tags.md
+    - "Supplementary": meta/supplementary.md
