--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ setuptools = "^78.1.0"
 mkdocs-callouts = "^1.16.0"
 mkdocs-obsidian-bridge = "^1.2.0"
 mkdocs-glightbox = "^0.4.0"
+mkdocs-git-revision-date-localized-plugin = "^1.4.5"
+mkdocs-git-committers-plugin-2 = "^2.5.0"
 
 
 [build-system]
