--- a/requirements.txt
+++ b/requirements.txt
@@ -287,6 +287,12 @@ fonttools[woff]==4.39.4 ; python_full_version == "3.10.14" \
 ghp-import==2.1.0 ; python_full_version == "3.10.14" \
     --hash=sha256:8337dd7b50877f163d4c0289bc1f1c7f127550241988d568c1db512c4324a619 \
     --hash=sha256:9c535c4c61193c2df8871222567d7fd7e5014d835f97dc7b7439069e2413d343
+gitdb==4.0.12 ; python_full_version == "3.10.14" \
+    --hash=sha256:5ef71f855d191a3326fcfbc0d5da835f26b13fbcba60c32c21091c349ffdb571 \
+    --hash=sha256:67073e15955400952c6565cc3e707c554a4eea2e428946f7a4c162fab9bd9bcf
+gitpython==3.1.44 ; python_full_version == "3.10.14" \
+    --hash=sha256:9e0e10cda9bed1ee64bc9a6de50e7e38a9c9943241cd7f585f6df3ed28011110 \
+    --hash=sha256:c87e30b26253bf5418b01b0660f818967f3c503193838337fe5e573331249269
 html5lib==1.1 ; python_full_version == "3.10.14" \
     --hash=sha256:0d78f8fde1c230e99fe37986a60526d7049ed4bf8a9fadbad5f00e22e58e041d \
     --hash=sha256:b2e5b40261e20f354d198eae92afc10d750afb487ed5e50f9c4eaf07c184146f
@@ -383,6 +389,12 @@ mkdocs-get-deps==0.2.0 ; python_full_version == "3.10.14" \
 mkdocs-git-authors-plugin==0.7.2 ; python_full_version == "3.10.14" \
     --hash=sha256:c8a2784a867db79ad3b477a96ee96875d17b09192b6d3be71f08df25afff76c4 \
     --hash=sha256:f541730e4cabdafa0ac758c94d28ba5e8ddca4c859e5de4c89f1226cb6ccd0ad
+mkdocs-git-committers-plugin-2==2.5.0 ; python_full_version == "3.10.14" \
+    --hash=sha256:1778becf98ccdc5fac809ac7b62cf01d3c67d6e8432723dffbb823307d1193c4 \
+    --hash=sha256:a01f17369e79ca28651681cddf212770e646e6191954bad884ca3067316aae60
+mkdocs-git-revision-date-localized-plugin==1.4.5 ; python_full_version == "3.10.14" \
+    --hash=sha256:395ae0b9eec565c78a76fffc938b70f52774bf2971245482d31aba47018c5fa9 \
+    --hash=sha256:9e37f1343d314c9cd8f9cbbf117c4bdc1d2d24a0653c5bbd7059d072f2cd0972
 mkdocs-glightbox==0.4.0 ; python_full_version == "3.10.14" \
     --hash=sha256:392b34207bf95991071a16d5f8916d1d2f2cd5d5bb59ae2997485ccd778c70d9 \
     --hash=sha256:e0107beee75d3eb7380ac06ea2d6eac94c999eaa49f8c3cbab0e7be2ac006ccf
@@ -517,6 +529,9 @@ pyphen==0.14.0 ; python_full_version == "3.10.14" \
 python-dateutil==2.8.2 ; python_full_version == "3.10.14" \
     --hash=sha256:0123cacc1627ae19ddf3c27a5de5bd67ee4586fbdd6440d9748f8abb483d3e86 \
     --hash=sha256:961d03dc3453ebbc59dbdea9e4e11c5651520a876d0f4db161e8674aae935da9
+pytz==2025.2 ; python_full_version == "3.10.14" \
+    --hash=sha256:360b9e3dbb49a209c21ad61809c7fb453643e048b38924c765813546746e81c3 \
+    --hash=sha256:5ddf76296dd8c44c26eb8f4b6f35488f3ccbf6fbbd7adee0b7262d43f0ec2f00
 pyyaml-env-tag==0.1 ; python_full_version == "3.10.14" \
     --hash=sha256:70092675bda14fdec33b31ba77e7543de9ddc88f2e5b99160396572d11525bdb \
     --hash=sha256:af31106dec8a4d68c60207c1886031cbf839b68aa7abccdb19868200532c2069
@@ -570,6 +585,9 @@ setuptools==78.1.0 ; python_full_version == "3.10.14" \
 six==1.16.0 ; python_full_version == "3.10.14" \
     --hash=sha256:1e61c37477a1626458e36f7b1d82aa5c9b094fa4802892072e49de9c60c4c926 \
     --hash=sha256:8abb2f1d86890a2dfb989f9a77cfcfd3e47c2a354b01111771326f8aa26e0254
+smmap==5.0.2 ; python_full_version == "3.10.14" \
+    --hash=sha256:26ea65a03958fa0c8a1c7e8c7a58fdc77221b8910f6be2131affade476898ad5 \
+    --hash=sha256:b30115f0def7d7531d22a0fb6502488d879e75b260a9db4d0819cfb25403af5e
 soupsieve==2.4.1 ; python_full_version == "3.10.14" \
     --hash=sha256:1c1bfee6819544a3447586c889157365a27e10d88cde3ad3da0cf0ddf646feb8 \
     --hash=sha256:89d12b2d5dfcd2c9e8c22326da9d9aa9cb3dfab0a83a024f05704076ee8d35ea
