--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -213,6 +213,8 @@ nav:
     - "HPA Lanolin": products/hpa_lanolin_lansinoh.md
     - "Google Calendar": products/google_calendar.md
     - "Google Drive": products/google_drive.md
+    - "Klean Kanteen Water Bottle": products/klean_kanteen_bottle.md
+    - "Bonding Top": products/bonding_top.md
   - "About":
     - "Roadmap": meta/roadmap.md
     - "Changelog": meta/changelog.md
