--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -215,6 +215,8 @@ nav:
     - "Google Drive": products/google_drive.md
     - "Klean Kanteen Water Bottle": products/klean_kanteen_bottle.md
     - "Bonding Top": products/bonding_top.md
+    - "Nobamed Pflegetuch": products/nobamed_pflegetuch.md
+    - "PoeticEHome Soft Dry Wipes": products/poeticehome_soft_dry_wipes.md
   - "About":
     - "Roadmap": meta/roadmap.md
     - "Changelog": meta/changelog.md
