--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -221,7 +221,13 @@ nav:
     - "Nobamed Pflegetuch": products/nobamed_pflegetuch.md
     - "PoeticEHome Soft Dry Wipes": products/poeticehome_soft_dry_wipes.md
     - "Bugaboo Fox 5": products/bugaboo_fox_5.md
-    - "Baby Daybook": products/baby_daybook.md
+    - "Baby Daybook App": products/baby_daybook.md
+    - "Baby Brezza Formula Pro Advanced": products/baby_brezza_formula_pro_advanced.md
+    - "Baby Brezza Bottle Washer Pro": products/baby_brezza_bottle_washer_pro.md
+    - "Philips Avent Bottle": products/philips_avent_bottle.md
+    - "Medela Symphony Milk Pump": products/medela_symphony.md
+    - "Neocate Infant": products/neocate_infant.md
+    - "Vienna Breastfeeding Donut": products/vienna_breastfeeding_donut.md
   - "Facilities":
     - "St. Elisabeth-Krankenhaus Köln-Hohenlind": facilities/koeln_hohenlind.md
   - "About":
