--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -232,6 +232,7 @@ nav:
     - "Chicco Nappy Bin": products/chicco_nappy_bin.md
     - "Ikea Standing Desk": products/ikea_standing_desk.md
     - "Cotabaty Baby Night Light": products/cotabaty_baby_night_light.md
+    - "Ergobaby Carrier": products/ergobaby_omni_deluxe_all-in-one.md
   - "Facilities":
     - "St. Elisabeth-Krankenhaus Köln-Hohenlind": facilities/koeln_hohenlind.md
   - "About":
