--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -157,6 +157,7 @@ plugins:
       enabled: true
       repository: emptymalei/baby
       branch: main
+      docs_path: book
 
 
 
@@ -209,6 +210,8 @@ nav:
     - "New Born Feeding": new_born/new_born_feeding.md
     - "Mother's Milk": new_born/mothers_milk.md
     - "Changing Table": new_born/changing_table.md
+    - "Evenings": new_born/evenings.md
+    - "Outdoor and Traveling": new_born/outdoor_and_traveling.md
   - "Documents":
     - "Documents Overview": documents/index.md
     - "Kinderuntersuchungsheft": documents/kinderuntersuchungsheft.md
@@ -233,6 +236,7 @@ nav:
     - "Ikea Standing Desk": products/ikea_standing_desk.md
     - "Cotabaty Baby Night Light": products/cotabaty_baby_night_light.md
     - "Ergobaby Carrier": products/ergobaby_omni_deluxe_all-in-one.md
+    - "Peak Design Tech Pouch": products/peak_design_tech_pouch.md
   - "Facilities":
     - "St. Elisabeth-Krankenhaus Köln-Hohenlind": facilities/koeln_hohenlind.md
   - "About":
