add stokke tripp trapp

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -238,6 +238,7 @@ nav:
     - "Cotabaty Baby Night Light": products/cotabaty_baby_night_light.md
     - "Ergobaby Carrier": products/ergobaby_omni_deluxe_all-in-one.md
     - "Peak Design Tech Pouch": products/peak_design_tech_pouch.md
+    - "Stokke Tripp Trapp": products/stokke_tripp_trapp.md
   - "Facilities":
     - "St. Elisabeth-Krankenhaus Köln-Hohenlind": facilities/koeln_hohenlind.md
   - "About":
