add withings thermo

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -240,6 +240,7 @@ nav:
     - "Peak Design Tech Pouch": products/peak_design_tech_pouch.md
     - "Stokke Tripp Trapp": products/stokke_tripp_trapp.md
     - "Zirkulin Bio Flohsamen Schalen": products/zirkulin_bio_flohsamen_schalen.md
+    - "Withings Thermo": products/withings_thermo.md
   - "Facilities":
     - "St. Elisabeth-Krankenhaus Köln-Hohenlind": facilities/koeln_hohenlind.md
   - "About":
