--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -210,6 +210,7 @@ nav:
     - "New Born Feeding": new_born/new_born_feeding.md
     - "Mother's Milk": new_born/mothers_milk.md
     - "Changing Table": new_born/changing_table.md
+    - "Bed": new_born/bed.md
     - "Evenings": new_born/evenings.md
     - "Outdoor and Traveling": new_born/outdoor_and_traveling.md
   - "Documents":
@@ -241,6 +242,7 @@ nav:
     - "Stokke Tripp Trapp": products/stokke_tripp_trapp.md
     - "Zirkulin Bio Flohsamen Schalen": products/zirkulin_bio_flohsamen_schalen.md
     - "Withings Thermo": products/withings_thermo.md
+    - "Maxi Cosi Iora Air Bed": products/maxi_cosi_iora_air_bed.md
   - "Facilities":
     - "St. Elisabeth-Krankenhaus Köln-Hohenlind": facilities/koeln_hohenlind.md
   - "About":
