add weight tracking

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -242,6 +242,7 @@ nav:
     - "Stokke Tripp Trapp": products/stokke_tripp_trapp.md
     - "Zirkulin Bio Flohsamen Schalen": products/zirkulin_bio_flohsamen_schalen.md
     - "Withings Thermo": products/withings_thermo.md
+    - "Withings Body Smart": products/withings_body_smart.md
     - "Maxi Cosi Iora Air Bed": products/maxi_cosi_iora_air_bed.md
   - "Facilities":
     - "St. Elisabeth-Krankenhaus Köln-Hohenlind": facilities/koeln_hohenlind.md
