--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -210,40 +210,44 @@ nav:
     - "New Born Feeding": new_born/new_born_feeding.md
     - "Mother's Milk": new_born/mothers_milk.md
     - "Changing Table": new_born/changing_table.md
-    - "Bed": new_born/bed.md
-    - "Evenings": new_born/evenings.md
+    - "Sleeping": new_born/sleeping.md
     - "Outdoor and Traveling": new_born/outdoor_and_traveling.md
   - "Documents":
     - "Documents Overview": documents/index.md
     - "Kinderuntersuchungsheft": documents/kinderuntersuchungsheft.md
   - "Product Catalog":
     - "Product Catalog": products/index.md
-    - "HPA Lanolin": products/hpa_lanolin_lansinoh.md
-    - "Google Calendar": products/google_calendar.md
-    - "Google Drive": products/google_drive.md
-    - "Klean Kanteen Water Bottle": products/klean_kanteen_bottle.md
-    - "Bonding Top": products/bonding_top.md
-    - "Boba Baby Wrap": products/boba_baby_wrap.md
-    - "Nobamed Pflegetuch": products/nobamed_pflegetuch.md
-    - "PoeticEHome Soft Dry Wipes": products/poeticehome_soft_dry_wipes.md
-    - "Bugaboo Fox 5": products/bugaboo_fox_5.md
-    - "Baby Daybook App": products/baby_daybook.md
-    - "Baby Brezza Formula Pro Advanced": products/baby_brezza_formula_pro_advanced.md
-    - "Baby Brezza Bottle Washer Pro": products/baby_brezza_bottle_washer_pro.md
-    - "Philips Avent Bottle": products/philips_avent_bottle.md
-    - "Medela Symphony Milk Pump": products/medela_symphony.md
-    - "Neocate Infant": products/neocate_infant.md
-    - "Vienna Breastfeeding Donut": products/vienna_breastfeeding_donut.md
-    - "Chicco Nappy Bin": products/chicco_nappy_bin.md
-    - "Ikea Standing Desk": products/ikea_standing_desk.md
-    - "Cotabaty Baby Night Light": products/cotabaty_baby_night_light.md
-    - "Ergobaby Carrier": products/ergobaby_omni_deluxe_all-in-one.md
-    - "Peak Design Tech Pouch": products/peak_design_tech_pouch.md
-    - "Stokke Tripp Trapp": products/stokke_tripp_trapp.md
-    - "Zirkulin Bio Flohsamen Schalen": products/zirkulin_bio_flohsamen_schalen.md
-    - "Withings Thermo": products/withings_thermo.md
-    - "Withings Body Smart": products/withings_body_smart.md
-    - "Maxi Cosi Iora Air Bed": products/maxi_cosi_iora_air_bed.md
+    - "Softwares, Apps and Websites":
+      - "Google Calendar": products/google_calendar.md
+      - "Google Drive": products/google_drive.md
+      - "Baby Daybook App": products/baby_daybook.md
+      - "Pathways.org": products/pathways_org.md
+    - "Feeding, Hygiene and Health":
+      - "HPA Lanolin": products/hpa_lanolin_lansinoh.md
+      - "Baby Brezza Formula Pro Advanced": products/baby_brezza_formula_pro_advanced.md
+      - "Baby Brezza Bottle Washer Pro": products/baby_brezza_bottle_washer_pro.md
+      - "Philips Avent Bottle": products/philips_avent_bottle.md
+      - "Medela Symphony Milk Pump": products/medela_symphony.md
+      - "Neocate Infant": products/neocate_infant.md
+      - "Vienna Breastfeeding Donut": products/vienna_breastfeeding_donut.md
+      - "Nobamed Pflegetuch": products/nobamed_pflegetuch.md
+      - "PoeticEHome Soft Dry Wipes": products/poeticehome_soft_dry_wipes.md
+      - "Chicco Nappy Bin": products/chicco_nappy_bin.md
+      - "Ikea Standing Desk": products/ikea_standing_desk.md
+      - "Withings Thermo": products/withings_thermo.md
+      - "Withings Body Smart": products/withings_body_smart.md
+    - "Mobility":
+      - "Boba Baby Wrap": products/boba_baby_wrap.md
+      - "Bugaboo Fox 5": products/bugaboo_fox_5.md
+      - "Ergobaby Carrier": products/ergobaby_omni_deluxe_all-in-one.md
+      - "Peak Design Tech Pouch": products/peak_design_tech_pouch.md
+    - "Other":
+      - "Klean Kanteen Water Bottle": products/klean_kanteen_bottle.md
+      - "Bonding Top": products/bonding_top.md
+      - "Cotabaty Baby Night Light": products/cotabaty_baby_night_light.md
+      - "Stokke Tripp Trapp": products/stokke_tripp_trapp.md
+      - "Zirkulin Bio Flohsamen Schalen": products/zirkulin_bio_flohsamen_schalen.md
+      - "Maxi Cosi Iora Air Bed": products/maxi_cosi_iora_air_bed.md
   - "Facilities":
     - "St. Elisabeth-Krankenhaus Köln-Hohenlind": facilities/koeln_hohenlind.md
   - "About":
