--- a/requirements.txt
+++ b/requirements.txt
@@ -380,6 +380,9 @@ mkdocs-bibtex==2.11.0 ; python_full_version == "3.10.14" \
 mkdocs-callouts==1.16.0 ; python_full_version == "3.10.14" \
     --hash=sha256:01ed1511045d61c05b072e4af42d68ef03a1863b7cfcc582bdbb676f26ffdf62 \
     --hash=sha256:d3248eb99b7acb00ba6526e183ca58d3f7083fb3cfa1739f74f8377e71002aec
+mkdocs-charts-plugin==0.0.12 ; python_full_version == "3.10.14" \
+    --hash=sha256:095150824a966852a4556fe5f501d17c08346acccdd0d43c340e3adcea686314 \
+    --hash=sha256:b3b2c8b06d87903e7f50318dd8c908e44455ea83ffc99c49d518ab0cf93a2ec2
 mkdocs-exclude-search==0.6.5 ; python_full_version == "3.10.14" \
     --hash=sha256:475e372dd17195700acd00213bcc804280d63f39cb7a0c76a801aceefd2807a6 \
     --hash=sha256:6a126367653caf946c56e446ff30ffdec931438a3e2a8740feff3f8682d52a54
