--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -163,7 +163,7 @@ plugins:
       enabled: !ENV [CI, false]
       repository: emptymalei/baby
       branch: main
-      docs_path: book
+      docs_path: book/
       token: !!python/object/apply:os.getenv ["MKDOCS_GIT_COMMITTERS_APIKEY"]
   - charts
 
