add poop information

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -222,6 +222,7 @@ nav:
     - "Mother's Milk": new_born/mothers_milk.md
     - "Changing Table": new_born/changing_table.md
     - "Sleeping": new_born/sleeping.md
+    - "Poop": new_born/poop.md
     - "Outdoor and Traveling": new_born/outdoor_and_traveling.md
   - "Documents":
     - "Documents Overview": documents/index.md
