add reer heater

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -250,6 +250,7 @@ nav:
       - "Withings Thermo": products/withings_thermo.md
       - "Withings Body Smart": products/withings_body_smart.md
       - "LEVOIT Air Purifier": products/levoit_air_purifier.md
+      - "reer Changing Table Heater": products/reer_changing_table_heater.md
     - "Sleeping":
       - "Love to Dream Swaddles": products/love_to_dream_swaddles.md
       - "Maxi Cosi Iora Air Bed": products/maxi_cosi_iora_air_bed.md
